@startuml
header
Entities have UUIDs as IDs unless noted otherwise
endheader

entity Team {
	contest: Contest
	submission: Submission
	name: String
}

entity TeamMember {
	team: Team
	person: Person
}

entity Person {
	<auth references>
}

Team "*" -- "*" Person
(Team, Person) .. TeamMember

entity Contest {
	name: String
	organizer: Person
	description: String?
	deadline: LocalDateTime
	maxTeamSize: Int
}

Team "*" -- "1" Contest

entity ContestSubmissionRestriction {
	contest: Contest
	restrictionType: String // Class<? : Restriction>
	data: Restriction // JSON
}

Contest "1" -- "*" ContestSubmissionRestriction

entity Submission {
	team: Team
	submittingPerson: Person
}

Team "1" -- "0..1     " Submission

@enduml
